# KappaLibrary

./: Cargo.toml  Makefile  README.md
data_model/: Cargo.toml  test_memory_manager_serialization.json
data_model/src/: connectors.rs  ffi.rs  lib.rs  memory_manager.rs  modules.rs  streaming_data.rs  streaming_error.rs
data_model/src/memory_var_macro/: Cargo.toml
data_model/src/memory_var_macro/src/: lib.rs
digital_filters/: Cargo.toml
digital_filters/src/: cfar_filter.rs  ekf.rs  fir.rs  iir.rs  lib.rs
digital_filters/test/: Trajectory.py
digital_filters/test/ekf_debug/: Cargo.toml
digital_filters/test/ekf_debug/src/: main.rs
digital_transform/: Cargo.toml
digital_transform/src/: fourier.rs  lib.rs
interfaces/: Cargo.toml
interfaces/src/: lib.rs  tcp_interface.rs  tcp_receiver.rs  tcp_sender.rs  udp_receiver.rs  udp_sender.rs
logger/: Cargo.toml
logger/src/: lib.rs
processor_engine/: Cargo.toml
processor_engine/src/: connectors.rs  engine.rs  ffi.rs  lib.rs  logger.rs  modules.rs  stream_processor.rs  task_monitor.rs  test.rs
processor_engine/src/connectors_macro/: Cargo.toml
processor_engine/src/connectors_macro/src/: lib.rs
processor_engine/src/math/: complex.rs  mod.rs  statistics.rs
processor_engine/src/stream_proc_macro/: Cargo.toml
processor_engine/src/stream_proc_macro/src/: lib.rs
processor_modes/: Cargo.toml
processor_modes/src/: lib.rs
utils/: Cargo.toml
utils/src/: time.rs
utils/src/math/: complex_vector.rs  matrix.rs  mod.rs  numbers.rs  statistics.rs
