[workspace]
resolver = "3"
members = [
    "processor_engine",
    "processor_engine/src/connectors_macro",
    "processor_engine/src/stream_proc_macro",
    "logger",
    "digital_filters",
    "digital_transform",
    "utils",
    "data_model"]

[workspace.dependencies]
num-traits = "0.2.19"
chrono = "0.4.42"
rand = "0.9.2"
