[workspace]
resolver = "3"
members = [
    "data_model",
    "data_model/src/memory_var_macro",
    "processor_engine",
    "processor_engine/src/stream_proc_macro",
    "utils",
    "interfaces", "processor_modes",
    ]

[workspace.dependencies]
num-traits = "0.2.19"
chrono = "0.4.42"
rand = "0.9.2"
