[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[lib]
name = "filter"
crate-type = ["rlib","dylib"]

[dependencies]
kappa_library = {path = "../kappa_library"}
connectors_macro = { path = "../kappa_library/src/connectors_macro" }
stream_proc_macro = {path = "../kappa_library/src/stream_proc_macro"}
num-traits = "0.2.19"
chrono = "0.4.42"
rand = "0.9.2"
