[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[lib]
name = "filter"
crate-type = ["rlib","dylib"]

[dependencies]
processor_engine = {path = "../processor_engine"}
connectors_macro = { path = "../processor_engine/src/connectors_macro" }
stream_proc_macro = {path = "../processor_engine/src/stream_proc_macro"}
data_model = {path = "../data_model"}
utils = {path = "../utils"}
num-traits = "0.2.19"
chrono = "0.4.42"
rand = "0.9.2"
