[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
data_model = { path = "../data_model"}
processor_engine = { path = "../processor_engine"}
stream_proc_macro = { path = "../processor_engine/src/stream_proc_macro"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
