[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
processor_engine = {path = "../processor_engine"}
connectors_macro = { path = "../processor_engine/src/connectors_macro" }
stream_proc_macro = {path = "../processor_engine/src/stream_proc_macro"}
data_model = {path = "../data_model"}
chrono = "0.4.42"
