[package]
name = "processor_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
connectors_macro = {path = "src/connectors_macro"}
stream_proc_macro = {path = "src/stream_proc_macro"}
data_model = {path = "../data_model"}
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"